# pymeta

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: lint.yml  mdBook.yml  tests.yml
crates/micropython-src/: micropython_embed.mk
crates/micropython-src/src/c/: mpconfigport.h
docs/: README.template.md  book.toml  make.py  make_readme.py  utils.py
docs/book/: .gitignore  make.py
docs/book/misc/: highlight_addon.js
docs/book/misc/hljs/: highlight.js
docs/book/theme/: highlight.css
docs/misc/hljs/: highlight.min.js
docs/src/: introduction.md
docs/src/pylib/: README.md
docs/theme/: ayu-highlight.css  tomorrow-night.css
pylib/src/: pymeta.py
pymeta-proc-macro/: Cargo.toml
pymeta-proc-macro-backend/: Cargo.toml  build.rs
pymeta-proc-macro-backend/pylib/src/: init.py
pymeta-proc-macro-backend/pylib/src/pymeta/: __init__.py  _internal.py  pattern.py
pymeta-proc-macro-backend/pylib/src/pymeta/_/: __init__.py  module.py  native.pyi
pymeta-proc-macro-backend/src/: lib.rs
pymeta-proc-macro-backend/src/py/: error.rs  impl_pyo3.rs  mod.rs
pymeta-proc-macro-backend/src/rust_to_py/: code_region.rs  meta.rs  mod.rs  py_code_gen.rs  py_source.rs  utils.rs
pymeta-proc-macro-backend/src/utils/: diagnostic.rs  escape.rs  indent.rs  literal.rs  mod.rs  parse_buffer.rs  parsing.rs  rust_token.rs  span.rs
pymeta-proc-macro-backend/tests/backend/: basic.rs  main.rs
pymeta-proc-macro-backend/tests/backend/expansion/: vecs_ops.rs
pymeta-proc-macro-backend/tests/backend/include/: func_sorted_array.input.rs  func_sorted_array.param.rs  semi_quoting_intro.input.rs  semi_quoting_intro.output.rs  sin_table.input.rs  sin_table.output.rs  sin_table_np.input.rs  vecs.input.rs  vecs.output.rs  vecs_ops.input.rs  vecs_struct.input.rs  vecs_swizzle.input.rs  vecs_swizzle.output.rs
pymeta-proc-macro/pylib/src/: init.py
pymeta-proc-macro/pylib/src/pymeta/: __init__.py  pattern.py
pymeta-proc-macro/src/: lib.rs
pymeta-proc-macro/src/py/: error.rs  impl_pyo3.rs  impl_rustpython.rs
pymeta-proc-macro/src/rust_to_py/: code_region.rs  meta.rs  py_code_gen.rs  py_source.rs  utils.rs
pymeta-proc-macro/src/utils/: mod.rs  parse_buffer.rs  parsing.rs  rust_token.rs  span.rs
src/: lib.rs  py_source.rs  rust_token.rs
src/py/: _pymeta.pyi  error.rs  impl_pyo3.rs  impl_rustpython.rs  mod.rs  pymeta.py
src/pylib/: _pymeta.pyi  pymeta.py
src/rust_to_py/: code_region.rs  code_regions.rs  mod.rs  py_code_gen.rs  py_source.rs  utils.rs
src/utils/: escape.rs  logging.rs  mod.rs  py_source.rs  rust_token.rs  span.rs
tests/: README.md
tests/backend/: basic.rs  main.rs
tests/cpython_env/: pyproject.toml
