[package]
name = "pymeta"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include = ["/README.md"]

[workspace.package]
version = "0.1.0-alpha.1"
description = "Metaprogramming Rust in Python!"
authors = ["shBLOCK <shblock3@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shBLOCK/pymeta"
categories = [
    "rust-patterns",
    "development-tools::procedural-macro-helpers",
    "development-tools::build-utils"
]
keywords = ["proc-macro", "python", "meta-programming", "codegen"]

[workspace]
members = [
    "pymeta-proc-macro",
    "pymeta-proc-macro-backend",
    "pymeta-micropython-src"
]
resolver = "3"

[dependencies]
pymeta-proc-macro = { path = "pymeta-proc-macro" }

[workspace.dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
proc-macro-error3 = { version = "3.0.2", default-features = false }

[features]
nightly = ["pymeta-proc-macro/nightly"]

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true


[workspace.lints.clippy]
unwrap_or_default = "allow"
collapsible_if = "allow"

[lints]
workspace = true