[package]
name = "pymeta"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include = ["/README.md"]

[workspace.package]
version = "0.1.0-alpha.1"
description = "Metaprogramming Rust in Python!"
authors = ["shBLOCK <shblock3@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shBLOCK/pymeta"
categories = [
    "rust-patterns",
    "development-tools::procedural-macro-helpers",
    "development-tools::build-utils"
]
keywords = ["proc-macro", "python", "meta-programming", "codegen"]

[workspace]
members = [
    "pymeta-proc-macro",
    "pymeta-proc-macro-backend"
]
resolver = "3"

[dependencies]
pymeta-proc-macro = { path = "pymeta-proc-macro" }

[workspace.dependencies]
proc-macro2 = { version = "1.0.106", default-features = false, features = ["span-locations"] }
quote = { version = "1.0.46", default-features = false }

[features]
default = ["linux_force_load_python_lib"]
nightly_diagnostic = ["pymeta-proc-macro/nightly_diagnostic"]
dump_source_on_error = ["pymeta-proc-macro/dump_source_on_error"]
linux_force_load_python_lib = ["pymeta-proc-macro/linux_force_load_python_lib"]

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[dev-dependencies]
pymeta-proc-macro-backend = { path = "pymeta-proc-macro-backend", features = [] }
proc-macro2 = { workspace = true }
quote = { workspace = true }
pretty_assertions = "1.4.1"

[workspace.lints.clippy]
unwrap_or_default = "allow"
collapsible_if = "allow"

[lints]
workspace = true