[package]
name = "pymeta-proc-macro-backend"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include = ["/pylib"]

[dependencies]
proc-macro2 = { workspace = true }

quote = "1.0.46"

#rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", tag = "2025-11-10-main-55" }
pyo3 = { version = "0.29.0" }

rustc-literal-escaper = "0.0.8"
either = "1.16.0"
unicode-ident = "1.0.24"


[features]
proc_macro = []
nightly_diagnostic = []
dump_source_on_error = []
#nightly_proc_macro_span = ["proc-macro2/span-locations"]


[lints]
workspace = true