[package]
name = "pymeta-proc-macro-backend"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include = ["/pylib"]

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }

#rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", tag = "2025-11-10-main-55" }
pyo3 = { version = "0.29.0" }

rustc-literal-escaper = "0.0.8"
either = "1.16.0"
unicode-ident = "1.0.24"

libc = { version = "0.2.186", optional = true }

[build-dependencies]
pyo3-build-config = { version = "0.29.0" }

[features]
proc_macro = ["proc-macro2/proc-macro", "quote/proc-macro"]
nightly_diagnostic = []
dump_source_on_error = []
linux_force_load_python_lib = ["dep:libc"]
#nightly_proc_macro_span = ["proc-macro2/span-locations"]

[dev-dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { version = "2.0.119", features = ["full"] }
prettyplease = "0.2.37"
pretty_assertions = "1.4.1"

[lints]
workspace = true