[package]
name = "pymeta-proc-macro"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
pymeta-proc-macro-backend = { path = "../pymeta-proc-macro-backend", features = ["proc_macro"] }

[features]
nightly_diagnostic = ["pymeta-proc-macro-backend/nightly_diagnostic"]
dump_source_on_error = ["pymeta-proc-macro-backend/dump_source_on_error"]
linux_force_load_python_lib = ["pymeta-proc-macro-backend/linux_force_load_python_lib"]


[lints]
workspace = true