[package]
name = "pymeta-proc-macro"
version.workspace = true
description = "Proc-macro definitions for PyMeta (do not use directly)"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include = ["/src"]

[lib]
proc-macro = true

[dependencies]
pymeta-proc-macro-backend = { workspace = true, features = ["proc_macro"] }

[features]
nightly_diagnostic = ["pymeta-proc-macro-backend/nightly_diagnostic"]
nightly_tracked = ["pymeta-proc-macro-backend/nightly_tracked"]
dump_source_on_error = ["pymeta-proc-macro-backend/dump_source_on_error"]
linux_force_load_python_lib = ["pymeta-proc-macro-backend/linux_force_load_python_lib"]


[lints]
workspace = true